# MarketResearch_ML

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: backtest.yaml  data.yaml  evaluation.yaml  execution.yaml  features.yaml  logging.yaml  model.yaml  paths.yaml  remote_data.yaml  remote_provider_env.local.example.ps1  signals.yaml  universe.yaml
data/raw/: README.md
docs/: 00_project_scope.md  01_research_questions.md  02_system_architecture.md  03_data_schema.md  04_feature_spec.md  05_backtest_spec.md  06_modeling_spec.md  07_evaluation_spec.md  08_experiment_tracking.md  09_risk_and_bias_controls.md  10_development_roadmap.md  market_research_master_setup.md
docs/templates/: dataset_qc_template.md  experiment_template.md  module_progress_template.md
progress/: current_status.md  module_backtesting.md  module_data_pipeline.md  module_features.md  module_modeling.md  module_reporting.md
scripts/: import_remote_provider_env.ps1  run_remote_refresh_and_research_scale.ps1  temp_permission_probe.py
src/: __init__.py  run_backtest.py  run_data_ingestion.py  run_evaluation_report.py  run_feature_generation.py  run_fetch_remote_raw.py  run_logistic_regression.py  run_model_backtest.py  run_model_evaluation_report.py  run_modeling_baselines.py  run_panel_assembly.py  run_random_forest.py  run_signal_generation.py
src/backtest/: __init__.py  config.py  holdings.py  metrics.py  qc.py  returns.py  trades.py
src/data/: __init__.py  alphavantage.py  benchmarks.py  config.py  fundamentals_data.py  io.py  market_data.py  (+7 more)
tests/: test_repo_skeleton.py
(+44 files in other folders)
